[gd_scene load_steps=3 format=3 uid="uid://bvafimfvwvyqp"]

[ext_resource type="Script" uid="uid://be1dp5xeptbxu" path="res://src/gui/configs_screen/settings_screen.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://dv432upup31h8" path="res://src/gui/components/cancel_button.tscn" id="2"]

[node name="SettingsScreen" type="CanvasLayer"]
script = ExtResource("1")

[node name="Hidable" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Hidable"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.243137, 0.211765, 0.290196, 0.717647)

[node name="CancelButton" parent="Hidable" instance=ExtResource("2")]
layout_mode = 0
anchors_preset = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Hidable"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="MusicVolumeContainer" type="VBoxContainer" parent="Hidable/VBoxContainer"]
layout_mode = 2

[node name="MusicVolumeLabelsContainer" type="HSplitContainer" parent="Hidable/VBoxContainer/MusicVolumeContainer"]
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="Hidable/VBoxContainer/MusicVolumeContainer/MusicVolumeLabelsContainer"]
layout_mode = 2
text = "Music Volume"

[node name="MusicVolumeValueLabel" type="Label" parent="Hidable/VBoxContainer/MusicVolumeContainer/MusicVolumeLabelsContainer"]
layout_mode = 2
text = "50"
horizontal_alignment = 2

[node name="MusicVolumeSlider" type="HSlider" parent="Hidable/VBoxContainer/MusicVolumeContainer"]
layout_mode = 2
value = 50.0

[connection signal="pressed" from="Hidable/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="value_changed" from="Hidable/VBoxContainer/MusicVolumeContainer/MusicVolumeSlider" to="." method="_on_MusicVolumeSlider_value_changed"]
